# skejj

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
.planning/: PROJECT.md  STATE.md
.planning/quick/003-review-build-deploy-v010/: 003-SUMMARY.md
crates/engine/: Cargo.toml
crates/engine/src/: allocator.rs  lib.rs  main.rs  model.rs  solver.rs  validator.rs
crates/engine/tests/: cli.rs
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: lib.rs
docs/: SCHEMA.md  schema.json
examples/: README.md  birthday-party.json  birthday-party.yaml  deadline.json  deadline.yaml  kenji-s-miso-salmon-with-teriyaki-broccoli.yaml  london-sightseeing.yaml  roast-chicken.json  roast-chicken.yaml  simple.json  simple.yaml
examples/json/: london-sightseeing.json
scripts/: build.js  generate-schema.ts
src/: engine.ts  index.ts  loader.ts  renderer.ts  schema.ts  suggestions.ts
src/ai/: config.ts  generate.ts  integrity.ts  provider.ts
src/commands/: adjust.ts  check.ts  config.ts  generate.ts  make.ts  new.ts
src/exporters/: csv.ts  index.ts  json.ts  mermaid.ts
src/types/: ink-modules.d.ts
src/ui/: AdjustApp.tsx  WizardApp.tsx
tests/: cli.test.ts  renderer.test.ts
tests/__snapshots__/: renderer.test.ts.snap
tests/fixtures/: consumable-override.json
