[package]
name = "skejj-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "skejj_engine"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "skejj-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.8"
thiserror = "2"
chrono = "0.4"
